# pro

./: readme.md
arena-challenge-clj/src/arena_challenge_clj/: core.clj
chicago-school-clj/: deps.edn
chicago-school-clj/src/: core.clj
chicago-school-py/: solve.py
csv-play-py/: core.py
driot-problem-clj/: droitproblem.clj
elevator-clj/: project.clj
elevator-clj/src/interview/: core.clj
elevator-clj/test/interview/: core_test.clj
name-matching/: README.md  project.clj
name-matching/outcome/: result-applicants-to-employees.csv  result-employees-to-applicants.csv
name-matching/src/name_matching/: core.clj  domain.clj  function.clj  research.clj  test.clj
name-matching/test/name_matching/: domain_test.clj
saying-manager/: mysayings.c  result.txt
scrabble-letter-c/: file.txt  letterfreq.c  requirement.txt  test.c
tetris-engine-clj/: .gitignore  README.md  project.clj
tetris-engine-clj/resources/: samples.edn
tetris-engine-clj/src/: core.clj
tetris-engine-clj/src/tetris_engine_clj/: core.clj
tetris-engine-clj/test/: core_test.clj
tetris-engine-clj/test/tetris_engine_clj/: core_test.clj
tetris-engine-js/: index.html
tictactoe-hs/: tictactoe-hs.cabal
tictactoe-hs/app/: Main.hs
