cabal-version:      3.0
name:               tictactoe-hs
version:            0.1.0.0
license:            BSD-3-Clause
build-type:         Simple
common warnings
    ghc-options: -Wall
executable tictactoe-hs
    import:          warnings
    main-is:         Main.hs
    build-depends:   base ^>=4.17.2.1
                   , safe ^>=0.3.19
    hs-source-dirs: app
    default-language: Haskell2010
